plugins {
    id 'java'
    id 'maven-publish'
    id 'me.champeau.jmh' version '0.7.2'
    id 'com.gradleup.shadow' version '9.2.0'
}

group = 'com.github.ABKQPO'
version = '1.1.4'

repositories {
    mavenCentral()
    maven {
        name = 'WagYourTail'
        url = uri('https://maven.wagyourtail.xyz/releases')
        mavenContent {
            releasesOnly()
        }
    }
    maven { url = uri('https://jitpack.io') }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

dependencies {
    implementation 'it.unimi.dsi:fastutil:8.5.12'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.google.code.gson:gson:2.10.1'

    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('compileJava') {
    options.release = 21
}

tasks.named('compileTestJava') {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

shadowJar {
    minimize()
    relocate 'it.unimi.dsi.fastutil', 'dev.vfyjxf.taffy.shadow.fastutil'
}

jmh {
    warmupIterations = 2
    iterations = 5
    fork = 1
    includes = ['.*Benchmark.*']
    excludes = ['.*ExtendedBenchmark.*']
    jmhVersion = '1.37'
    resultFormat = 'JSON'
    resultsFile = project.file("${project.buildDir}/reports/jmh/results.json")
    jvmArgs = ['-Xss16m']
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = project.group
            artifactId = 'taffy-java'
            version = project.version
            from components.java
            pom {
                name = 'Taffy-Java'
                description = 'A pure Java implementation of the Taffy UI layout library.'
                url = 'https://github.com/ABKQPO/taffy-java'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://github.com/ABKQPO/taffy-java/blob/main/LICENSE'
                    }
                }
                scm {
                    url = 'https://github.com/ABKQPO/taffy-java'
                    connection = 'scm:git:https://github.com/ABKQPO/taffy-java.git'
                    developerConnection = 'scm:git:ssh://git@github.com/ABKQPO/taffy-java.git'
                }
            }
        }
    }
    repositories {
        mavenLocal()
    }
}
